[tool.poetry]
name = "gitverse"
version = "0.1.0"
description = "manage submodule and zonemodules"
authors = ["MChrys <chrys.beltran@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygit2 = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
